--- a/web/web/Views/Themes/Create.cshtml
+++ b/web/web/Views/Themes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model web.Models.Theme
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавить блог";
 }
 
 <h2>Create</h2>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.category, "category", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.category, "Категории", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("category", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
@@ -73,14 +73,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Добавить" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Назад", "Index")
 </div>
 
 @section Scripts {
