--- a/web/web/Views/Themes/Edit.cshtml
+++ b/web/web/Views/Themes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model web.Models.Theme
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Редактор";
 }
 
-<h2>Edit</h2>
+<h2>Редактирование</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Theme</h4>
+        <h4>Блог</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
@@ -66,7 +66,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.category, "category", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.category, "Категории", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("category", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
@@ -75,14 +75,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Сохранить" class="btn btn-danger" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Назад", "Index")
 </div>
 
 @section Scripts {
