--- a/web/web/Views/Home/Index.cshtml
+++ b/web/web/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                 {
                     <tr>
                         <td>
-                            <a href="Themes/@item.id"> <H4>@item.title</H4>    </a>                    <p class="col-lg-offset-10">@item.date</p>
+                            <a href="News/Index/@item.id"> <H4>@item.title</H4>    </a>                    <p class="col-lg-offset-10">@item.date</p>
                         </td>
 
 
