--- a/web/web/Views/News/Delete.cshtml
+++ b/web/web/Views/News/Delete.cshtml
@@ -4,9 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Удаление</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>News</h4>
     <hr />
@@ -41,8 +40,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "View")
         </div>
     }
 </div>
