--- a/web/web/Views/News/Details.cshtml
+++ b/web/web/Views/News/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+
 
 <div>
-    <h4>News</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -38,5 +38,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Назадt", "View")
 </p>
