--- a/web/web/Views/News/Edit.cshtml
+++ b/web/web/Views/News/Edit.cshtml
@@ -1,8 +1,6 @@
 ﻿@model web.Models.News
 
-@{
-    ViewBag.Title = "Edit";
-}
+
 
 <h2>Edit</h2>
 
@@ -12,7 +10,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>News</h4>
+        <h4>Новости</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
@@ -50,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Назад", "View")
 </div>
 
 @section Scripts {
